add changes in products descriptions

--- a/app/views/landing_page/about.html.erb
+++ b/app/views/landing_page/about.html.erb
@@ -11,14 +11,13 @@
                 <span class="section-heading-lower">Qui Sommes-nous ?</span>
             </h2>
                 <p>
-                Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in 
-                various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing 
-                back to you here in our cafe.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                 </p>
                 <p class="mb-0">
-                We guarantee that you will fall in <em>lust</em> with our decadent blends the moment you 
-                walk inside until you finish your last sip. Join us for your daily routine, an outing with friends,
-                or simply just to enjoy some alone time.</p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             </div>
             </div>
         </div>
