--- a/app/views/landing_page/products.html.erb
+++ b/app/views/landing_page/products.html.erb
@@ -13,7 +13,10 @@
             <%= image_tag "b-hand2.jpg", class: "product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" %>
         <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-                <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+                <p class="mb-0">
+                Nous proposons une gamme variée de soins des mains et d'ongleries. Vous pourrez découvrir les différents types de poses de vernis, gels, résines, de remplissage etc.. 
+                Vous satisfaire est notre priorité.
+                </p>
             </div>
         </div>
     </div>
@@ -33,7 +36,10 @@
             <%= image_tag "b-foot-650.jpg", class: "product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" %>
         <div class="product-item-description d-flex ml-auto">
             <div class="bg-faded p-5 rounded">
-                <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime. We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty goods.</p>
+                <p class="mb-0">
+                    Prendre soin de vos pieds ne sera plus un probléme. Chez BeautyCure nous vous proposons une gamme variée de pédicure et de pose de vernis.
+                    Vous satisfaire est notre priorité.
+                </p>
             </div>
         </div>
     </div>
@@ -53,7 +59,12 @@
             <%= image_tag "b-eyes1.jpg", class: "product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" %>
         <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-                <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always find new blends from around the world, mainly from regions in Central and South America. We sell our blends in smaller to large bulk quantities. Please visit us in person for more details.</p>
+                <p class="mb-0">
+                    Le Regard, un Regard, des cils "parfait" et des sourcils d'une précision évidente.
+                    Venez chez BeautyCure afin de découvrir notre gamme de soins dédié à la beauté du regard.
+                    Vous receverez des conseils adaptés de la part de nos professionnel.
+                    Vous satisfaire est notre priorité.
+                </p>
         </div>
     </div>
 </section>
@@ -72,7 +83,12 @@
             <%= image_tag "b-body.jpg", class: "product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" %>
         <div class="product-item-description d-flex ml-auto">
             <div class="bg-faded p-5 rounded">
-                <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always find new blends from around the world, mainly from regions in Central and South America. We sell our blends in smaller to large bulk quantities. Please visit us in person for more details.</p>
+                <p class="mb-0">
+                    Afin de pouvoir passer un moment privilégié entre de bonne mains et ainsi laisser votre Corps
+                    se relaxer.
+                    En compagnie de notre personnel professionnel et chaleureux, vous pourrez profiter de notre large gamme
+                    de soins du corps.
+                </p>
         </div>
     </div>
 </section>
@@ -91,7 +107,11 @@
             <%= image_tag "b-face.jpg", class: "product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" %>
         <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-                <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always find new blends from around the world, mainly from regions in Central and South America. We sell our blends in smaller to large bulk quantities. Please visit us in person for more details.</p>
+            <p class="mb-0">
+                BeautyCure est en mesure de vous proposez une gamme fourni de soins allant des plus classiques aux nouvelles techniques.
+                Nos professionnels sauront vous proposer des soins adaptés pour tous les types de peau et tous les ages.
+                Vous staisfaire est notre priorité.
+                </p>
         </div>
     </div>
 </section>
