fix somme css in products, not finish yet

--- a/app/views/landing_page/products.html.erb
+++ b/app/views/landing_page/products.html.erb
@@ -1,17 +1,16 @@
-
 <section class="page-section">
     <div class="container">
         <div class="product-item">
             <div class="product-item-title d-flex">
-                <div class="bg-faded p-5 d-flex ml-auto rounded">
+                <div class="bg-faded p-5 d-flex mx-auto rounded">
                     <h2 class="section-heading mb-0">
                         <span class="section-heading-upper">Beauté des mains</span>
-                        <span class="section-heading-lower">Onglerie</span>
+                        <span class="section-heading-lower">Soins  &amp; Onglerie </span>
                     </h2>
                 </div>
             </div>
             <%= image_tag "b-hand2.jpg", class: "product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" %>
-        <div class="product-item-description d-flex mr-auto">
+        <div class="product-item-description d-flex mx-auto">
             <div class="bg-faded p-5 rounded">
                 <p class="mb-0">
                 Nous proposons une gamme variée de soins des mains et d'ongleries. Vous pourrez découvrir les différents types de poses de vernis, gels, résines, de remplissage etc.. 
@@ -26,15 +25,15 @@
     <div class="container">
         <div class="product-item">
             <div class="product-item-title d-flex">
-                <div class="bg-faded p-5 d-flex mr-auto rounded">
+                <div class="bg-faded p-5 d-flex mx-auto rounded">
                     <h2 class="section-heading mb-0">
                         <span class="section-heading-upper">Beauté des pieds</span>
-                        <span class="section-heading-lower">Pédicure</span>
+                        <span class="section-heading-lower">Onglerie  &amp;  Pédicure</span>
                     </h2>
                 </div>
             </div>
             <%= image_tag "b-foot-650.jpg", class: "product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" %>
-        <div class="product-item-description d-flex ml-auto">
+        <div class="product-item-description d-flex mx-auto">
             <div class="bg-faded p-5 rounded">
                 <p class="mb-0">
                     Prendre soin de vos pieds ne sera plus un probléme. Chez BeautyCure nous vous proposons une gamme variée de pédicure et de pose de vernis.
@@ -49,7 +48,7 @@
     <div class="container">
         <div class="product-item">
             <div class="product-item-title d-flex">
-                <div class="bg-faded p-5 d-flex ml-auto rounded">
+                <div class="bg-faded p-5 d-flex mx-auto rounded">
                     <h2 class="section-heading mb-0">
                         <span class="section-heading-upper">Beauté du regard</span>
                         <span class="section-heading-lower">MicroShading &amp; blading</span>
@@ -57,7 +56,7 @@
                 </div>
             </div>
             <%= image_tag "b-eyes1.jpg", class: "product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" %>
-        <div class="product-item-description d-flex mr-auto">
+        <div class="product-item-description d-flex mx-auto">
             <div class="bg-faded p-5 rounded">
                 <p class="mb-0">
                     Le Regard, un Regard, des cils "parfait" et des sourcils d'une précision évidente.
@@ -73,7 +72,7 @@
     <div class="container">
         <div class="product-item">
             <div class="product-item-title d-flex">
-                <div class="bg-faded p-5 d-flex mr-auto rounded">
+                <div class="bg-faded p-5 d-flex mx-auto rounded">
                     <h2 class="section-heading mb-0">
                         <span class="section-heading-upper">Soins du Corps</span>
                         <span class="section-heading-lower">Epilation | Gommage | Soins</span>
@@ -81,7 +80,7 @@
                 </div>
             </div>
             <%= image_tag "b-body.jpg", class: "product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" %>
-        <div class="product-item-description d-flex ml-auto">
+        <div class="product-item-description d-flex mx-auto">
             <div class="bg-faded p-5 rounded">
                 <p class="mb-0">
                     Afin de pouvoir passer un moment privilégié entre de bonne mains et ainsi laisser votre Corps
@@ -97,7 +96,7 @@
     <div class="container">
         <div class="product-item">
             <div class="product-item-title d-flex">
-                <div class="bg-faded p-5 d-flex ml-auto rounded">
+                <div class="bg-faded p-5 d-flex mx-auto rounded">
                     <h2 class="section-heading mb-0">
                         <span class="section-heading-upper">Soins du visage</span>
                         <span class="section-heading-lower">Gommage | Soin | Bbflow</span>
@@ -105,7 +104,7 @@
                 </div>
             </div>
             <%= image_tag "b-face.jpg", class: "product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" %>
-        <div class="product-item-description d-flex mr-auto">
+        <div class="product-item-description d-flex mx-auto">
             <div class="bg-faded p-5 rounded">
             <p class="mb-0">
                 BeautyCure est en mesure de vous proposez une gamme fourni de soins allant des plus classiques aux nouvelles techniques.
