--- a/lib/assets/stylesheets/business-casual.css
+++ b/lib/assets/stylesheets/business-casual.css
@@ -191,7 +191,7 @@ p {
     position: relative;
     z-index: 0;
     width: 700px;
-    height: 700px;
+    max-width: 700px;
     max-width: 60vw;
   }
   .product-item .product-item-description {
