create appointement, employee, product, workd_day models and migration

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,6 +28,9 @@
         <li class="nav-item px-lg-4">
             <%= link_to "Magasin", store_path, class: "nav-link text-uppercase text-expanded" %>
         </li>
+        <li class="nav-item px-lg-4">
+            <%= link_to "Reservation", reservations_path, class: "nav-link text-uppercase text-expanded" %>
+        </li>
         <li class="nav-item dropdown px-lg-4">
             <p class="nav-link dropdown-toggle text-uppercase text-expanded" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown
