--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  *= require bootstrap/css/bootstrap.min
  *= require business-casual.min
+ *= require simple_calendar
  */
 
 .logo_size {
