try to fix rebase master

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,7 +28,23 @@
         <li class="nav-item px-lg-4">
             <%= link_to "Magasin", store_path, class: "nav-link text-uppercase text-expanded" %>
         </li>
+        <li class="nav-item dropdown px-lg-4">
+            <p class="nav-link dropdown-toggle text-uppercase text-expanded" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+            </p>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <% if user_signed_in? %>
+                <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                <p class="dropdown-item"> Voici ton email : <%= current_user.email %> </p>
+                <%= link_to "Edit email / password", edit_user_registration_path, class: "dropdown-item" %>
+                    <% else %>
+                <%= link_to "Se Connecter", new_user_session_path, class: "dropdown-item" %>
+                <%= link_to "S'inscrire", new_user_registration_path, class: "dropdown-item" %>
+                    <% end %>
+            </div>
+        </li>
         </ul>
     </div>
     </div>
 </nav>
+
