--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -31,6 +31,12 @@
         <li class="nav-item px-lg-4">
             <%= link_to "Reservation", reservations_path, class: "nav-link text-uppercase text-expanded" %>
         </li>
+        <li class="nav-item px-lg-4">
+            <%= link_to "Services", services_path, class: "nav-link text-uppercase text-expanded" %>
+        </li>
+        <li class="nav-item px-lg-4">
+            <%= link_to "Products", products_path, class: "nav-link text-uppercase text-expanded" %>
+        </li>
         <li class="nav-item dropdown px-lg-4">
             <p class="nav-link dropdown-toggle text-uppercase text-expanded" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown
