--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+
+<%= current_user %>
+<% @products.each do |product| %>
+    <%= product.title%>
+    <%= link_to 'Voir plus', product_path(product.id) %><br>
+<%end%>
