--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,8 @@
+<h1>Nos Produits</h1>
 
-<%= current_user %>
-<% @products.each do |product| %>
+<div>
+    <% @products.each do |product| %>
     <%= product.title%>
     <%= link_to 'Voir plus', product_path(product.id) %><br>
-<%end%>
+    <%end%>
+</div>
