--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Services#show</h1>
-<p>Find me in app/views/services/show.html.erb</p>
+<h1><%= @service.title %></h1>
+
+
+<div>
+    <%= @service.price %><br>
+    <%= @service.description %>
+</div>
