add duration and create seed for services

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -2,6 +2,7 @@
 
 
 <div>
-    <%= @service.price %><br>
-    <%= @service.description %>
+    <p>Description : <%= @service.description %> </p>
+    <p>Duréé du soin :  <%= @service.duration %> min </p>
+    <p>Prix : <%= @service.price %> € </p>
 </div>
