--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,7 @@
 
 .card-service {
     display: flex;
-    justify-content: space-around;
+    justify-content: left;
     flex-direction: row;
 }
 
