add css services items index view

--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -4,7 +4,7 @@
 <div class="card-service">
     <% b_hand = @services[0..9] %>
     <% b_hand.each do |service| %>
-        <div class="service-hands">
+        <div class="service-style">
             <%= service.title%>
             <%= link_to 'Voir plus', service_path(service.id) %>
         </div>
@@ -14,7 +14,7 @@
 <div class="card-service">  
     <% b_foot = @services[10..13] %>
     <% b_foot.each do |service| %>
-        <div class="service-feet">
+        <div class="service-style">
             <%= service.title%><br>
             <%= link_to 'Voir plus', service_path(service.id) %>
         </div>
@@ -24,7 +24,7 @@
 <div class="card-service">  
     <% b_body = @services[14..21] %>
     <% b_body.each do |service| %>
-        <div class="service-body">
+        <div class="service-style">
             <%= service.title%><br>
             <%= link_to 'Voir plus', service_path(service.id) %>
         </div>
@@ -34,7 +34,7 @@
 <div class="card-service">  
     <% b_eyes = @services[21..32] %>
     <% b_eyes.each do |service| %>
-        <div class="service-eyes"> 
+        <div class="service-style"> 
             <%= service.title%><br>
             <%= link_to 'Voir plus', service_path(service.id) %>
         </div>
@@ -44,7 +44,7 @@
 <div class="card-service">  
     <% b_face = @services[32..43] %>
     <% b_face.each do |service| %>
-        <div class="service-faces"> 
+        <div class="service-style"> 
             <%= service.title%><br>
             <%= link_to 'Voir plus', service_path(service.id) %>
         </div>
