--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,48 +26,22 @@
 
 .card-service {
     display: flex;
-    justify-content: left;
+    justify-content: left   ;
     flex-direction: row;
 }
 
-.service-hands {
-    border: solid grey;
+.service-style {
+    border: solid rgba(81, 17, 87, 0.9);
     margin: 10px;
     padding: 10px;
     width: 200px;
-    height: 150px;
-    text-align: center;    
+    max-width: 250px;
+    height: 200px;
+    max-height: 250px;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;    
 }
-
-.service-feet {
-    border: solid blue;
-    margin: 10px;
-    padding: 10px;
-    width: 200px;
-    height: 150px; 
+.service-style:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
-
-.service-body {
-    border: solid blueviolet;
-    margin: 10px;
-    padding: 10px;
-    width: 200px;
-    height: 150px;
-}
-
-.service-eyes {
-    border: solid red;
-    margin: 10px;
-    padding: 10px;
-    width: 200px;
-    height: 150px;
-}
-
-.service-faces {
-    border: solid palegreen;
-    margin: 10px;
-    padding: 10px;
-    width: 200px;
-    height: 160px;
-}
-
