--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,8 +1,17 @@
-<h1><%= @service.title %></h1>
+<!--<h1 class="h1-service"><%= @service.title %></h1>
 
 
-<div>
+<div class="service-style-show">
     <p>Description : <%= @service.description %> </p>
     <p>Duréé du soin :  <%= @service.duration %> min </p>
     <p>Prix : <%= @service.price %> € </p>
 </div>
+-->
+
+<div class="card-service-show">
+    <%= image_tag "bc-logo-blue.jpg", class: "img-service" %>
+    <h1 class="h1-service"><%= @service.title %></h1>
+    <p class="price"><%= @service.price %> FCFA</p>
+    <p><%= @service.description %> </p>
+    <p><button>Add to Cart</button></p>
+</div> 
