--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -7,7 +7,7 @@
         <div class="service-style">
             <%= service.title%>
             <%= link_to 'Voir plus', service_path(service.id) %>
-            <%= button_to 'Ajouter au Panier', cart_services_path(service_id: service), class: "btn btn-primary"%>
+            <%= button_to 'Ajouter au Panier', cart_add_service_path(service.id), class: "btn btn-primary"%>
         </div>
     <% end %>
 </div>
@@ -19,7 +19,7 @@
         <div class="service-style">
             <%= service.title%><br>
             <%= link_to 'Voir plus', service_path(service.id) %>
-            <%= button_to 'Ajouter au Panier', cart_services_path(service_id: service), class: "btn btn-primary"%>
+            <#%= button_to 'Ajouter au Panier', cart_add_service_path(service.id), class: "btn btn-primary"%>
         </div>
     <% end %>
 </div>
@@ -31,7 +31,7 @@
         <div class="service-style">
             <%= service.title%><br>
             <%= link_to 'Voir plus', service_path(service.id) %>
-            <%= button_to 'Ajouter au Panier', cart_services_path(service_id: service), class: "btn btn-primary"%>
+            <#%= button_to 'Ajouter au Panier', cart_add_service_path(service.id), class: "btn btn-primary"%>
         </div>
     <% end %>
 </div>
@@ -43,7 +43,7 @@
         <div class="service-style"> 
             <%= service.title%><br>
             <%= link_to 'Voir plus', service_path(service.id) %>
-            <%= button_to 'Ajouter au Panier', cart_services_path(service_id: service), class: "btn btn-primary"%>
+            <#%= button_to 'Ajouter au Panier', cart_add_service_path(service.id), class: "btn btn-primary"%>
         </div>
     <% end %>
 </div>
@@ -55,7 +55,7 @@
         <div class="service-style"> 
             <%= service.title%><br>
             <%= link_to 'Voir plus', service_path(service.id) %>
-            <%= button_to 'Ajouter au Panier', cart_services_path(service_id: service), class: "btn btn-primary"%>
+            <#%= button_to 'Ajouter au Panier', cart_add_service_path(service.id), class: "btn btn-primary"%>
         </div>
     <% end %>
 </div>
