--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,8 +1,8 @@
 <p>Panier</p>
 
-<% @cart_services.each do |cart_service| %>
-    <%= cart_service.service.title %>
-    <%= cart_service.service.description %>
-    <%= cart_service.service.price %>
-    <%= cart_service.service.duration %>
+<%= @cart.user.email %>
+<% @cart.cart_services.each do |osef| %><br>
+    <%= osef.service.title %>
+    <%= osef.service.price %>
+    <%= osef.service.description %>
 <%end%>
