--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,8 +1,12 @@
 <p>Panier</p>
-
-<% @cart_services.each do |cart_service| %><br>
-    <%= cart_service.service.title %>
-    <%= cart_service.service.description %>
-    <%= cart_service.service.price %>
-    <%= cart_service.service.duration %>
-<%end%>
+<div class="card-service-show">
+    <% @cart_services.each do |cart_service| %><br>
+        <div>
+            <%= cart_service.service.title %>
+            <%= cart_service.service.description %>
+            <%= cart_service.service.price %>
+            <%= cart_service.service.duration %>
+            <%= link_to 'Supprimer', cart_delete_cart_path(@cart.id), method: :delete, class: "btn btn-primary"%>
+        </div>
+    <%end%>
+</div>
