Change show card style (#5)
* change config.sign_out_via = :delete to :get to solve sign-out pbm in devise.rb

* create button delete item and try to create def to destroy each with click

* add delete button for cart item

* add total price and total duration + style in show card

* erase puts and inspect in cart controller

* change route get to delete for delete_cart_item method, and change link_to to button_to
to delete items from cart

Co-authored-by: seven-dev7 <seven.devl7@gmail.com>
Co-authored-by: Se7en Oussama <seven.tdr7@gmail.com>
Co-authored-by: unknown <sevendevl7@gmail.com>

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -96,3 +96,42 @@
 .img-service {
     width: 100%;
 }
+
+
+/* Css card cart style show */
+
+.h1-cart-service {
+    text-align: center;
+}
+
+.cart-style {
+    border: solid black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: auto;
+    max-width: 600px;
+    height: auto;
+    max-height: 250px;
+    margin: 20px auto;
+    padding: 15px;
+}
+.card-cart-style {
+    border: solid green;
+    margin-right: 10px;
+}
+
+.button-cart {
+    justify-content: right;
+}
+
+.total-price-cart {
+    margin: 10px;
+}
+.total-duration-cart {
+    margin: 10px;
+}
+
+.valid-buton {
+    background-color: blueviolet;
+}
