appointment controller crud, simple form new appointment, try def lock_cart

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,10 @@
  *= require_self
  *= require bootstrap/css/bootstrap.min
  *= require business-casual.min
+ *= require datetime_picker_input 
  *= require simple_calendar
  */
+
 
 .logo_size {
     height: 100px;
