form new appointment, change db, model association from cart cart_service and appointment

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -25,7 +25,7 @@
                             <%= @array_duration.sum%> minutes
     </div>
     <div>
-        <%= link_to 'Reservation', new_appointment_path(@appointment, @cart_services), method: :lock_cart, class: 'btn valid-button' %>
+        <%= link_to 'Prendre RDV', new_appointment_path, class: 'btn valid-button' %>
     </div>
 </div>
 
