Make button to rendering to calendar to valid reservation (#6)
* add variable to reservation def in landing page controller

* commit before changing db

* change model and migration to appointment and order

* appointment controller crud, simple form new appointment, try def lock_cart

* remove date_timer_input gem

* form new appointment, change db, model association from cart cart_service and appointment

* add flash_class in application helper

Co-authored-by: unknown <sevendevl7@gmail.com>

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -24,8 +24,8 @@
                         <%end%>
                             <%= @array_duration.sum%> minutes
     </div>
-    <div class='btn valid-buton'>
-        <%= button_to 'Reservation' %>
+    <div>
+        <%= link_to 'Prendre RDV', new_appointment_path, class: 'btn valid-button' %>
     </div>
 </div>
 
